--- a/Ensemble_Methods.ipynb
+++ b/Ensemble_Methods.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -459,6 +459,109 @@
     "\n",
     "s_score = sclf.score(X_test, y_test)\n",
     "print(\"s_score: \", s_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Boosting:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. AdaBoost (Adaptive Boosting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dt_score:  0.7094655120931621\n",
+      "ada_score:  0.8244252015527023\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "\n",
+    "#Fitting of Weak Classifier\n",
+    "dt_clf = DecisionTreeClassifier(max_depth = 1, random_state = 0)\n",
+    "dt_clf.fit(X_train, y_train)\n",
+    "dt_score = dt_clf.score(X_test, y_test)\n",
+    "print(\"dt_score: \", dt_score)\n",
+    "\n",
+    "# Fitting of weak classifier with Adaboost\n",
+    "ada_clf = AdaBoostClassifier(base_estimator = dt_clf, random_state = 0)\n",
+    "ada_clf.fit(X_train, y_train)\n",
+    "ada_score = ada_clf.score(X_test, y_test)\n",
+    "print(\"ada_score: \", ada_score)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gb_score:  0.8462227530606151\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "gb_clf = GradientBoostingClassifier(random_state = 0)\n",
+    "gb_clf.fit(X_train, y_train)\n",
+    "gb_score = gb_clf.score(X_test, y_test)\n",
+    "print(\"gb_score: \", gb_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## eXtreme Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xgb_score:  0.8438339802926247\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "xgb_clf = XGBClassifier(base_estimator = dt_clf, random_state = 0)\n",
+    "\n",
+    "xgb_clf.fit(X_train, y_train)\n",
+    "xgb_score = xgb_clf.score(X_test, y_test)\n",
+    "print(\"xgb_score: \", xgb_score)"
    ]
   }
  ],
